# ml-imdb-gru

./: .gitignore  .pre-commit-config.yaml  README.md  SourceCode.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
configs/: base.yaml  exp_bs_large.yaml  exp_lr_high.yaml  exp_lr_low.yaml
scripts/: evaluate.py  explore_data.py  run_experiments.py  train.py
src/imdb_gru/: __init__.py
src/imdb_gru/data/: __init__.py  dataset.py  loader.py  preprocessing.py  vocabulary.py
src/imdb_gru/evaluation/: __init__.py  error_analysis.py  evaluator.py
src/imdb_gru/models/: __init__.py  attention_extension.py  gru_classifier.py
src/imdb_gru/training/: __init__.py  callbacks.py  losses.py  metrics.py  optimizer.py  trainer.py
src/imdb_gru/utils/: __init__.py  config.py  seeding.py
src/imdb_gru/visualization/: __init__.py  plots.py
tests/: test_callbacks.py  test_dataset.py  test_evaluator.py  test_model.py  test_preprocessing.py  test_trainer.py  test_vocabulary.py
